// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getRecordFromRecordNode should convert a simple record node 1`] = `
{
  "__typename": "Penduduk",
  "email": "budi@bades.id",
  "id": "123",
  "name": "Budi Santoso",
}
`;

exports[`getRecordFromRecordNode should handle array values 1`] = `
{
  "__typename": "Penduduk",
  "id": "123",
  "scores": [
    100,
    200,
    300,
  ],
  "tags": [
    "developer",
    "designer",
  ],
}
`;

exports[`getRecordFromRecordNode should handle connection fields with edges 1`] = `
{
  "__typename": "Keluarga",
  "daftarPenduduk": [
    {
      "__typename": "Penduduk",
      "id": "456",
      "name": "Budi Santoso",
    },
    {
      "__typename": "Penduduk",
      "id": "789",
      "name": "Siti Maryam",
    },
  ],
  "id": "123",
  "name": "Acme Inc",
}
`;

exports[`getRecordFromRecordNode should handle deeply nested structures 1`] = `
{
  "__typename": "Workspace",
  "id": "123",
  "settings": {
    "__typename": "WorkspaceSettings",
    "display": {
      "__typename": "DisplaySettings",
      "layout": "compact",
      "theme": "dark",
    },
  },
}
`;

exports[`getRecordFromRecordNode should handle mixed nested objects and connections 1`] = `
{
  "__typename": "Keluarga",
  "address": {
    "__typename": "Address",
    "city": "New York",
    "country": "USA",
  },
  "employees": [
    {
      "__typename": "Penduduk",
      "id": "456",
      "name": {
        "__typename": "FullName",
        "firstName": "Budi",
        "lastName": "Saputra",
      },
    },
  ],
  "id": "123",
  "name": "Acme Inc",
}
`;

exports[`getRecordFromRecordNode should handle nested object fields 1`] = `
{
  "__typename": "Penduduk",
  "id": "123",
  "name": {
    "__typename": "FullName",
    "firstName": "Budi",
    "lastName": "Saputra",
  },
}
`;

exports[`getRecordFromRecordNode should handle null and undefined values 1`] = `
{
  "__typename": "Penduduk",
  "email": null,
  "id": "123",
  "name": "Budi Santoso",
  "phone": undefined,
}
`;
